# MyProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/include/: mylib.h
src/lib/: module1.cpp  module2.cpp  module4.cpp
tests/: CMakeLists.txt
